# isap-dataengineer-2026

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  monthly-check.yml
assignment/: README.md
config/: pipeline.yml  source_manifest.json  sources.yml
datasets/: README.md
docs/: assignment_answers.md  automation_walkthrough.md  code_walkthrough.md  data_dictionary.md  data_profiling_report.md  demo_script.md  junior_recommendations.md  presentation_guide.md  readiness_checklist.md  solution_report.md  submission_overview.md  terms_explained.md  warehouse_design.md
notebooks/: 01_eda_data_profiling.ipynb  README.md
scripts/: build_eda_notebook.py
sql/: 001_create_raw.sql  002_create_staging.sql  003_create_marts.sql  004_sample_queries.sql
src/isap_pipeline/: __init__.py  __main__.py  clean.py  cli.py  config.py  discovery.py  downloader.py  dq.py  excel_inspector.py  extract_cgd.py  extract_ocsc.py  load.py  logging_utils.py  metadata.py
tests/: test_cgd_transform.py  test_data_quality.py  test_date_conversion.py  test_discovery.py  test_downloader.py  test_header_normalization.py  test_idempotency.py  test_ocsc_transform.py  test_source_check.py  test_sync_latest.py  test_sync_latest_end_to_end.py
