[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isap-data-eng-pipeline"
version = "0.1.0"
description = "Local demo data pipeline for the ISAP Data Engineer take-home assignment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb==0.10.2",
  "openpyxl>=3.1",
  "pandas>=2.0,<3.0",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.0",
  "matplotlib>=3.8",
  "nbclient>=0.10",
  "nbconvert>=7.0",
  "nbformat>=5.10",
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
isap-pipeline = "isap_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks/*.ipynb"]
